Refactoring, New FTP client

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
+__pycache__
 /deployer/settings/secrets.json
-/__pycache__/
-/deployer/apps/listeners/__pycache__/
 /.idea/
-/.DS_Store
+.DS_Store
 /.pycharm
-/simpleBlog/uploads
